pre-submission drafts and code

--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -36,6 +36,17 @@ number={2},
 pages={325-333.e2}
 }
 
+@article{sassi2006calculating,
+  title={Calculating {QALYs}, comparing {QALY} and {DALY} calculations},
+  author={Sassi, Franco},
+  journal={Health policy and planning},
+  volume={21},
+  number={5},
+  pages={402--408},
+  year={2006},
+  publisher={Oxford University Press}
+}
+
 @article{jullion2007robust,
   title={Robust specification of the roughness penalty prior distribution in spatially adaptive Bayesian P-splines models},
   author={Jullion, Astrid and Lambert, Philippe},
@@ -147,8 +158,8 @@ publisher={Taylor \& Francis Group}
 }
 
 @article{epsteinGG2014,
-  title={The 2014 International Society of Urological Pathology (ISUP) consensus conference on 
-  Gleason grading of prostatic carcinoma},
+  title={The 2014 International Society of Urological Pathology ({ISUP}) consensus conference on 
+  {Gleason} grading of prostatic carcinoma},
   author={Epstein, Jonathan I and Egevad, Lars and Amin, Mahul B and Delahunt, Brett and Srigley, John R and Humphrey, Peter A},
   journal={The American journal of surgical pathology},
   volume={40},
@@ -298,7 +309,7 @@ isbn = {9781439872864}
 }
 
 @article{weusten2017endoscopic,
-  title={Endoscopic management of Barrett’s esophagus: European Society of Gastrointestinal Endoscopy (ESGE) position statement},
+  title={Endoscopic management of {Barrett's} esophagus: European Society of Gastrointestinal Endoscopy (ESGE) position statement},
   author={Weusten, Bas and Bisschops, Raf and Coron, Emanuel and Dinis-Ribeiro, M{\'a}rio and Dumonceau, Jean-Marc and Esteban, Jos{\'e}-Miguel and Hassan, Cesare and Pech, Oliver and Repici, Alessandro and Bergman, Jacques and others},
   journal={Endoscopy},
   volume={49},
@@ -340,10 +351,10 @@ publisher={Wiley}
 }
 
 @article{tomer2020webapp,
-  title={A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance},
+  title={A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk {PCa} Under Active Surveillance},
   author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Bjartell, Anders and Steyerberg, Ewout W and Rizopoulos, Dimitris and et al.},
   journal={-},
-  volume={manuscript submitted},
+  volume={manuscript submitted to European Urology},
   number={-},
   pages={-},
   year={2020},
@@ -382,99 +393,6 @@ publisher={Institute of Statistical Science, Academia Sinica}
   year={2012},
   publisher={INFORMS}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @article{pearson1994mixed,
   title={Mixed-effects regression models for studying the natural history of prostate disease},
@@ -623,6 +541,17 @@ year = {2002}
   volume={119},
   number={4},
   pages={560--566},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{de2017should,
+  title={When should active surveillance for prostate cancer stop if no progression is detected?},
+  author={de Carvalho, Tiago M and Heijnsdijk, Eveline AM and de Koning, Harry J},
+  journal={The Prostate},
+  volume={77},
+  number={9},
+  pages={962--969},
   year={2017},
   publisher={Wiley Online Library}
 }
@@ -809,7 +738,7 @@ publisher={Elsevier}
 }
 
 @article{coley2017prediction,
-  title={Prediction of the pathologic Gleason score to inform a personalized management program for prostate cancer},
+  title={Prediction of the pathologic {Gleason} score to inform a personalized management program for prostate cancer},
   author={Coley, R Yates and Zeger, Scott L and Mamawala, Mufaddal and Pienta, Kenneth J and Carter, H Ballentine},
   journal={European urology},
   volume={72},
