--- a/report/lastpaper/supplementary/jm_param_estimation.tex
+++ b/report/lastpaper/supplementary/jm_param_estimation.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Joint Model for Time-to-Progression and Longitudinal Outcomes}
 \label{sec:jointmodel}
-Let the true time of disease progression for the ${i\mbox{-th}}$ patient be $T_i^*$. Progression is always observed with interval censoring ${l_i < T_i^* \leq r_i}$. In patients who obtain progression, $r_i$ and $l_i$ denote the time of their latest and second latest invasive tests. Otherwise, $l_i$ denotes the time of their latest test and ${r_i=\infty}$. Assuming $K$ auxiliary longitudinal outcomes, let $\boldsymbol{y}_{ki}$ denote the ${n_{ki} \times 1}$ longitudinal response vector of the ${k\mbox{-th}}$ outcome, $k\epsilon\{1, \ldots, K\}$. The observed data of all $n$ patients is given by ${\mathcal{A}_n = \{l_i, r_i, \boldsymbol{y}_{1i},\ldots \boldsymbol{y}_{Ki}; i = 1, \ldots, n\}}$.
+Let the true time of disease progression for the ${i\mbox{-th}}$ patient be $T_i^*$. Progression is always observed with interval censoring ${l_i < T_i^* \leq r_i}$. In patients who obtain progression, $r_i$ and $l_i$ denote the time of their latest and second latest invasive tests. Otherwise, $l_i$ denotes the time of their latest test and ${r_i=\infty}$. Assuming $K$ auxiliary longitudinal outcomes, let $\boldsymbol{y}_{ki}$ denote the ${n_{ki} \times 1}$ longitudinal response vector of the ${k\mbox{-th}}$ outcome, $k\in\{1, \ldots, K\}$. The observed data of all $n$ patients is given by ${\mathcal{A}_n = \{l_i, r_i, \boldsymbol{y}_{1i},\ldots \boldsymbol{y}_{Ki}; i = 1, \ldots, n\}}$.
 
 To accommodate longitudinal outcomes of different types in a unified framework, the joint model consists of a generalized linear mixed-effects sub-model~\citep{laird1982random}. In particular, the conditional
 distribution of $\boldsymbol{y}_{ki}$ given a vector of patient-specific random effects $\boldsymbol{b}_{ki}$ is assumed to be a member of the exponential family, with linear predictor given by,
