--- a/report/lastpaper/supplementary/sim_study_full_res.tex
+++ b/report/lastpaper/supplementary/sim_study_full_res.tex
@@ -1,5 +1,5 @@
 % !TEX root =  ../supplementary.tex
-\section{Simulation Study Results}
+\section{Simulation Study}
 In the simulation study, we evaluated the following biopsy schedules \citep{loeb2014heterogeneity, inoue2018comparative}: biopsy every year (annual), biopsy according to the PRIAS schedule (PRIAS), personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa=10\%$, and automatically chosen $\kappa^*(v)$ (Section~3 of main manuscript), and automatically chosen ${\kappa^*\{v \mid E(D)\leq 0.75\}}$ with a constraint of 9 months (0.75 years) on expected delay in detecting progression. We compare all the aforementioned schedules on two criteria, namely the number of biopsies they schedule and the corresponding time delay in detection of cancer progression, in years (time of positive biopsy - true time of cancer progression). The corresponding results, using ${\mbox{500} \times \mbox{250}}$ test patients are presented in Table \ref{table:sim_study_all}. Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While, we are able to calculate total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients.
 
 \begin{table}[!htb]
@@ -11,21 +11,19 @@ In the simulation study, we evaluated the following biopsy schedules \citep{loeb
 \hline
 Schedule & $\mbox{Q}_1^{\mbox{nb}}$ & $\mu^{\mbox{nb}}$ & $\mbox{Med}^{\mbox{nb}}$ & $\mbox{Q}_3^{\mbox{nb}}$ & $\mbox{Q}_1^{\mbox{d}}$ & $\mu^{\mbox{d}}$ & $\mbox{Med}^{\mbox{d}}$  & $\mbox{Q}_3^{\mbox{d}}$ \\
 \hline
-Annual     & 1  & 3.69 & 3  & 6  & 0.29 & 0.55 & 0.57 & 0.82\\
-PRIAS      & 1  & 2.87 & 2  & 4  & 0.38 & 0.91 & 0.74 & 1.00\\
-%$\kappa=5\%$  & 1  & 3.30 &  2  & 5  & 0.33 & 0.66 & 0.65 & 0.91\\
+Annual        & 1  & 3.71 & 3  & 6  & 0.29 & 0.55 & 0.57 & 0.82\\
+PRIAS         & 1  & 2.88 & 2  & 4  & 0.38 & 0.92 & 0.74 & 1.00\\
 $\kappa=10\%$ & 1  & 2.55 & 2  & 4  & 0.45 & 1.00 & 0.85 & 1.33\\
-$\kappa^*(v)$ & 1  & 2.44 & 2  & 3  & 0.46 & 0.89 & 0.86 & 1.26\\
-$\kappa^*\{v \mid E(D)\leq 0.75\}$ & 1  & 3.36 & 3  & 5  & 0.32 & 0.61 & 0.63 & 0.88\\
+$\kappa^*(v)$ & 1  & 2.46 & 2  & 3  & 0.45 & 0.89 & 0.86 & 1.26\\
+$\kappa^*\{v \mid E(D)\leq 0.75\}$ & 1  & 3.39 & 3  & 5  & 0.32 & 0.61 & 0.63 & 0.88\\
 \hline
 \multicolumn{9}{l}{\textbf{Non-progressing patients (50\%)}}\\
 \hline
-Annual     & 10  & 10 & 10 & 10 & - & - & - & -\\
-PRIAS      & 4  & 6.42 & 6  & 8  & - & - & - & -\\
-%$\kappa=5\%$  & 7  & 7.58 & 8  & 9  & - & - & - & - \\
-$\kappa=10\%$ & 4  & 4.93 & 5  & 6  & - & - & - & - \\
-$\kappa^*(v)$ & 6 & 6.21 & 6  & 7  & - & - & - & -\\
-$\kappa^*\{v \mid E(D)\leq 0.75\}$ & 8 & 8.66 & 9  & 9  & - & - & - & -\\
+Annual         & 10 & 10.00   & 10 & 10 & - & - & - & -\\
+PRIAS          & 4  & 6.40 & 6  & 8  & - & - & - & -\\
+$\kappa=10\%$  & 4  & 4.91 & 5  & 6  & - & - & - & - \\
+$\kappa^*(v)$  & 6  & 6.22 & 6  & 7  & - & - & - & -\\
+$\kappa^*\{v \mid E(D)\leq 0.75\}$ & 8 & 8.68 & 9  & 9  & - & - & - & -\\
 \hline
 \end{tabular}
 \end{table}
